Rework the plugin to use the sample sample instead of the stub sample content

--- a/projects/adaptivemusic_plugin/msvc10/adaptivemusic_plugin.vcxproj
+++ b/projects/adaptivemusic_plugin/msvc10/adaptivemusic_plugin.vcxproj
@@ -1176,6 +1176,7 @@ copy "$(TargetDir)$(TargetName).pdb" "C:\Program Files (x86)\Steam\steamapps\com
   <ItemGroup>
     <ClInclude Include="..\adaptivemusic_plugin.h" />
     <ClInclude Include="..\adaptivemusic_watcher.h" />
+    <ClInclude Include="..\engine_wrappers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
