Add boilerplate health watcher

--- a/projects/adaptivemusic_plugin/msvc10/adaptivemusic_plugin.vcxproj
+++ b/projects/adaptivemusic_plugin/msvc10/adaptivemusic_plugin.vcxproj
@@ -640,7 +640,7 @@
     <ClCompile>
       <AdditionalOptions>/D SE_EPISODE1=1 /D SE_DARKMESSIAH=2 /D SE_ORANGEBOX=3 /D SE_BLOODYGOODTIME=4 /D SE_EYE=5 /D SE_CSS=6 /D SE_ORANGEBOXVALVE=7 /D SE_LEFT4DEAD=8 /D SE_LEFT4DEAD2=9 /D SE_ALIENSWARM=10 /D SE_PORTAL2=1 /D SE_CSGO=12 %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(MMSOURCE18)\core;$(MMSOURCE18)\core\sourcehook;$(HL2SDKOBVALVE)\public;$(HL2SDKOBVALVE)\public\engine;$(HL2SDKOBVALVE)\public\game\server;$(HL2SDKOBVALVE)\public\tier0;$(HL2SDKOBVALVE)\public\tier1;$(HL2SDKOBVALVE)\public\vstdlib;..\..\..\public\fmod\core;..\..\..\public\fmod\studio;..\..\..\public\fmod\fsbank;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MMSOURCE18)\core;$(MMSOURCE18)\core\sourcehook;$(HL2SDKOBVALVE)\public;$(HL2SDKOBVALVE)\public\engine;$(HL2SDKOBVALVE)\public\game\server;$(HL2SDKOBVALVE)\public\tier0;$(HL2SDKOBVALVE)\public\tier1;$(HL2SDKOBVALVE)\public\vstdlib;..\..\..\public\fmod\core;..\..\..\public\fmod\studio;..\..\..\public\fmod\fsbank;$(HL2SDKOBVALVE)\game\server;$(HL2SDKOBVALVE)\game\shared;$(HL2SDKOBVALVE)\game;$(HL2SDKOBVALVE)\game\client;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;ADAPTIVEMUSIC_PLUGIN_EXPORTS;SOURCE_ENGINE=7;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -651,7 +651,7 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>$(HL2SDKOBVALVE)\lib\public\tier0.lib;$(HL2SDKOBVALVE)\lib\public\tier1.lib;$(HL2SDKOBVALVE)\lib\public\vstdlib.lib;$(SolutionDir)\..\..\..\lib\public\fmod_vc.lib;$(SolutionDir)\..\..\..\lib\public\fmodL_vc.lib;$(SolutionDir)\..\..\..\lib\public\fmodstudio_vc.lib;$(SolutionDir)\..\..\..\lib\public\fmodstudioL_vc.lib;$(SolutionDir)\..\..\..\lib\public\fsbank_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(HL2SDKOBVALVE)\lib\public\tier0.lib;$(HL2SDKOBVALVE)\lib\public\tier1.lib;$(HL2SDKOBVALVE)\lib\public\vstdlib.lib;$(SolutionDir)\..\..\..\lib\public\fmod_vc.lib;$(SolutionDir)\..\..\..\lib\public\fmodL_vc.lib;$(SolutionDir)\..\..\..\lib\public\fmodstudio_vc.lib;$(SolutionDir)\..\..\..\lib\public\fmodstudioL_vc.lib;$(SolutionDir)\..\..\..\lib\public\fsbank_vc.lib;$(HL2SDKOBVALVE)\lib\public\tier2.lib;$(HL2SDKOBVALVE)\lib\public\tier3.lib;$(HL2SDKOBVALVE)\lib\public\bitmap.lib;$(HL2SDKOBVALVE)\lib\public\choreoobjects.lib;$(HL2SDKOBVALVE)\lib\public\dmxloader.lib;$(HL2SDKOBVALVE)\lib\public\mathlib.lib;$(HL2SDKOBVALVE)\lib\public\matsys_controls.lib;$(HL2SDKOBVALVE)\lib\public\nvtristrip.lib;$(HL2SDKOBVALVE)\lib\public\particles.lib;$(HL2SDKOBVALVE)\lib\public\raytrace.lib;$(HL2SDKOBVALVE)\lib\public\steam_api.lib;$(HL2SDKOBVALVE)\lib\public\vgui_controls.lib;$(HL2SDKOBVALVE)\lib\public\vmpi.lib;$(HL2SDKOBVALVE)\lib\public\appframework.lib;$(HL2SDKOBVALVE)\lib\public\fgdlib.lib;$(HL2SDKOBVALVE)\lib\public\libz.lib;$(HL2SDKOBVALVE)\lib\public\shaderlib.lib;$(HL2SDKOBVALVE)\lib\public\vtf.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)adaptivemusic_plugin.dll</OutputFile>
       <IgnoreSpecificDefaultLibraries>LIBC;LIBCD;LIBCMT;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -660,6 +660,8 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalLibraryDirectories>
+      </AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>if not exist "..\..\..\game\bin\." mkdir "..\..\..\game\bin\."
